# garden-app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.test  README.md  alembic.ini  compose.yaml  dev-requirements.txt  docker-compose.test.yml  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 000_create_base_tables.py  001_add_year_column.py  002_add_space_required.py  003_remove_season_field.py  004_add_harvests_table.py
docs/: azure-deployment.md  development-guide.md  raspberry-pi-deployment.md  testing-guide.md
fastapi-template/: README.md
scripts/: entrypoint.sh  garden-app.service  run-tests-local.sh  run-tests.sh  setup-raspberry-pi.sh
src/: database.py  models.py
src/routes/: __init__.py  frontend.py  garden.py  images.py  stats.py
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/garden/: bed_detail.html  beds.html  plants.html  stats.html
tests/: conftest.py  test_garden_beds.py  test_harvests.py  test_main.py  test_plants.py  test_stats.py
