[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garden-app"
version = "0.1.0"
authors = [
    { name = "Garden App Team" },
]
description = "A garden management application"
requires-python = ">=3.11"

[project.dependencies]
dependencies = "requirements.txt"

[project.optional-dependencies]
dev-requirements = {file = "dev-requirements.txt"}

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml --cov-report=json --cov-branch"
pythonpath = ["."]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\."
]
show_missing = true
fail_under = 85

[tool.coverage.html]
directory = "coverage/html"
title = "Garden App Test Coverage"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.coverage.json]
output = "coverage/coverage.json"
